fix header shift

--- a/example/index.css
+++ b/example/index.css
@@ -1,5 +1,5 @@
 body {
-    margin: 80px 0 0 0 ;
+    margin: 140px 0 0 0 ;
 }
 
 .header {
@@ -7,7 +7,7 @@ body {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: 140px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,10 +24,10 @@ body {
 
 .header-opened {
     top: 0 !important;
-    transition: 0.2s;
+    transition: .2s;
 }
 
 .header-closed {
-    top: -80px !important;
-    transition: 0.2s;
+    top: -140px !important;
+    transition: .2s;
 }
